# Physics-Sandbox-Simulator

./: .gitignore  CMakeLists.txt  colorPalette.txt  main.cpp
include/: config.h  editor.h  physics.h
src/: editor.cpp  main.cpp  physics.cpp
